Fixed the add sub admin dialog button layout issue and add ellipis for 2 line for product title

--- a/src/backend/resources/css/app.css
+++ b/src/backend/resources/css/app.css
@@ -201,3 +201,10 @@ html {
 	scrollbar-width: thin;
 	overflow-y: scroll;
 }
+
+.line-clamp-2 {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+}
